Fix long url overflow

--- a/stopflash.css
+++ b/stopflash.css
@@ -89,7 +89,10 @@ a:hover{
                 box-shadow:0 0 3px rgba(0,0,0,0.1);
             }
                 .flash-url{
+                    overflow:hidden;
                     color:#bbb;
+                    white-space:nowrap;
+                    text-overflow:ellipsis;
                 }
                 .flash-type{
                     color:#333;
